2008-12-03  Kenichi Handa  <handa@m17n.org>

	* font.c (font_at): Set `multibyte' at first.

	* coding.c (decode_coding_charset): Check type of an element of
	vector VALIDS.

	* fontset.c (face_for_char): Handle invalid charset property
	correctly.
	(font_for_char): Likewise.

2008-12-03  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (Fopen_font): Compute pixel size correctly.
	(font_update_lface): Handle fonts with corrupted size specs,
	i.e. non-int and non-float.

	* ftfont.c (ftfont_match): Initialize entity variable.
	(ftfont_resolve_generic_family): Avoid using uninitialized var.
	(ftfont_list_family): Initialize list var earlier.

	* xselect.c (Fx_get_cut_buffer_internal): Fix memory leak.

	* xterm.c (x_draw_glyph_string): Fall back on
	underline_minimum_offset for underline position.

2008-12-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* keyboard.c (read_char_help_form_unwind): Specify the type for ARG.

	* character.c (c_string_width): Specify the type for LEN.

2008-12-03  Kenichi Handa  <handa@m17n.org>

	* coding.c (decode_coding_utf_16): Initialize consumed_chars_base
	to 0.
	(decode_coding_utf_8): Likewise.
	(detect_coding_system): Initialize utf_16_le_eol to -1, val to
	Qnil.
	(produce_chars): Initialize consumed_chars to 0.

2008-12-02  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (make_lispy_position): Only use PT if the selected
	window is current.

2008-12-02  Andreas Schwab  <schwab@suse.de>

	* font.c (font_unparse_fcname): Fix use of uninitialized variable.

	* doprnt.c (doprnt1): Fix size of charbuf.

2008-12-02  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (timer_check): Revert last change.

2008-12-02  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in ($(BLD)/w32console.$(O)): Fix silly, silly typo.

2008-12-01  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in: Update dependencies.
	(CONFIG_H): Add $(EMACS_ROOT)/nt/inc/sys/time.h.

2008-12-01  Andreas Schwab  <schwab@suse.de>
