@@ -1,3 +1,7 @@
+2008-12-03  Juanma Barranquero  <lekktu@gmail.com>
+
+	* w32.c (init_environment): Don't free handle to library shell32.dll.
+
 2008-12-03  Kenichi Handa  <handa@m17n.org>
 
 	* font.c (font_at): Set `multibyte' at first.
